# pmo-ops-portal

./: .env  .env.example  .gitignore  README.md  package-lock.json  package.json
apps/api/: alembic.ini  pmo_ops_p1_schema.db  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 260508_0001_initial_core_tables.py  260511_0002_p1_operational_schema.py  260512_0003_add_delivery_pm_name.py  260513_0004_drop_legacy_project_fields.py  260515_0005_simplify_project_logs_mvp.py  260519_0006_drop_unused_owner_and_pre_notice_columns.py  260519_0007_normalize_assignment_status_role.py  260519_0008_drop_redundant_project_columns.py  260519_0009_drop_project_code_redundant_fields.py  260617_0011_rename_personnel_contract_dates.py  260617_0012_rename_personnel_contract_dates_back.py  260619_0015_job_locks.py  260622_0016_drop_holiday_repeat_and_note.py  260624_0017_enforce_project_master_links.py  260624_0018_add_sales_owner_role.py  260625_0019_backfill_project_master_pairs.py
apps/api/app/: main.py
apps/api/app/api/: common.py  deps.py
apps/api/app/core/: config.py  database.py
apps/api/app/domain/: holidays.py  people.py  personnel.py  project_code_policy.py  projects.py
apps/api/app/enums/: __init__.py
apps/api/app/models/: __init__.py  core.py
apps/api/app/schemas/: holidays.py  people.py  projects.py
apps/api/app/services/: data_backup.py  holiday_sync.py  project_master.py
apps/api/app/tools/: import_seed_bundle.py  seed_bundle.py  (+2 more)
apps/api/tests/: test_alembic_migrations.py  test_holiday_sync.py  test_holiday_sync_cli.py  test_p1_api.py
(+218 files in other folders)
